found and fixed horizontal scroll on header

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 .wrapper {
     max-width: 1400px;
     margin: 0 auto;
-    width: 95%;
+    width: 80vw;
 }
 
 
@@ -19,7 +19,8 @@ h1 {
     /* font-size: 146.4px; */
     font-size: calc(25px + (146.4 - 25) * ((100vw - 300px) / (1600 - 300)));
     /* font-weight: regular; */
-    line-height: 120px;
+    /* line-height: 120px; */
+    line-height: calc(10px + (120 - 1) * ((100vw - 300px)/(1600 - 300)));
 }
 
 h2 {
@@ -132,7 +133,6 @@ header .container {
 
 header h1 {
     padding: 0 38%;
-    float: left;
 }
 
 .social i {
@@ -239,14 +239,27 @@ footer {
 }
 
 footer .wrapper {
-    padding: 1.5em;
+    /* padding: 0 0 0 3em; */
+    margin: 0 auto;
+    padding: 0 3%;
+}
+
+footer h2 {
+    padding-left: 1em;
 }
 
 footer section {
-    width: calc( 50% - 8em);
-    float: left;
+    /* width: calc( 50% - 2em); */
+    /* float: left; */
     padding: 0;
-    margin: 0 4em;
+}
+
+.contact {
+    float: left;
+}
+
+.subscribe {
+    float: right;
 }
 
 footer p {
